--- a/.github/workflows/lembretes.yml
+++ b/.github/workflows/lembretes.yml
@@ -1,28 +1,38 @@
 name: Lembretes WhatsApp
 
 on:
+  push:
+    branches:
+      - master
   schedule:
     - cron: '*/5 * * * *'  # Executa a cada 5 minutos
+  workflow_dispatch:  # Permite execução manual
 
 jobs:
   lembretes_job:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout do Código
-      uses: actions/checkout@v3
+      - name: Checkout do Código
+        uses: actions/checkout@v3
 
-    - name: Configurar Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Configurar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Instalar Dependências
-      run: pip install -r requirements.txt
+      - name: Instalar Dependências
+        run: pip install -r requirements.txt
 
-    - name: Rodar Script de Lembretes
-      env:
-        ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}
-        AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-        TELEFONE: ${{ secrets.TELEFONE }}
-      run: python src/lembretes.py
+      - name: Verificar Variáveis de Ambiente
+        run: |
+          echo "ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}"
+          echo "AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}"
+          echo "TELEFONE: ${{ secrets.TELEFONE }}"
+
+      - name: Rodar Script de Lembretes
+        env:
+          ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}
+          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+          TELEFONE: ${{ secrets.TELEFONE }}
+        run: python src/lembretes.py
