--- a/.github/workflows/lembretes.yml
+++ b/.github/workflows/lembretes.yml
@@ -3,7 +3,7 @@ name: Lembretes WhatsApp
 on:
   push:
     branches:
-      - master
+      - Lembrete
   schedule:
     - cron: '*/1 * * * *'  # Executa a cada 5 minutos
   workflow_dispatch:  # Permite execução manual
