--- a/.github/workflows/lembretes.yml
+++ b/.github/workflows/lembretes.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - Lembrete
   schedule:
-    - cron: '*/1 * * * *'  # Executa a cada 5 minutos
-  workflow_dispatch:  # Permite execução manual
+    - cron: '*/1 * * * *'
+  workflow_dispatch:
 
 jobs:
   lembretes_job:
@@ -24,11 +24,15 @@ jobs:
       - name: Instalar Dependências
         run: pip install -r requirements.txt
 
-      - name: Verificar Variáveis de Ambiente
+      - name: Definir Variáveis de Ambiente
+        env:
+          ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}
+          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+          TELEFONE: ${{ secrets.TELEFONE }}
         run: |
-          echo "ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}"
-          echo "AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}"
-          echo "TELEFONE: ${{ secrets.TELEFONE }}"
+          echo "ACCOUNT_SID=${ACCOUNT_SID}"
+          echo "AUTH_TOKEN=${AUTH_TOKEN}"
+          echo "TELEFONE=${TELEFONE}"
 
       - name: Rodar Script de Lembretes
         env:
