--- a/.github/workflows/lembretes.yml
+++ b/.github/workflows/lembretes.yml
@@ -25,14 +25,10 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Definir Variáveis de Ambiente
-        env:
-          ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}
-          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-          TELEFONE: ${{ secrets.TELEFONE }}
         run: |
-          echo "ACCOUNT_SID=${ACCOUNT_SID}"
-          echo "AUTH_TOKEN=${AUTH_TOKEN}"
-          echo "TELEFONE=${TELEFONE}"
+          echo "ACCOUNT_SID=${{ secrets.ACCOUNT_SID }}" >> $GITHUB_ENV
+          echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
+          echo "TELEFONE=${{ secrets.TELEFONE }}" >> $GITHUB_ENV
 
       - name: Rodar Script de Lembretes
         env:
