--- a/.github/workflows/lembretes.yml
+++ b/.github/workflows/lembretes.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - Lembrete
   schedule:
-    - cron: '*/1 * * * *'  # Executa a cada 5 minutos
-  workflow_dispatch:  # Permite execução manual
+    - cron: '*/5 * * * *'
+  workflow_dispatch:
 
 jobs:
   lembretes_job:
@@ -24,11 +24,11 @@ jobs:
       - name: Instalar Dependências
         run: pip install -r requirements.txt
 
-      - name: Verificar Variáveis de Ambiente
+      - name: Definir Variáveis de Ambiente
         run: |
-          echo "ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}"
-          echo "AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}"
-          echo "TELEFONE: ${{ secrets.TELEFONE }}"
+          echo "ACCOUNT_SID=${{ secrets.ACCOUNT_SID }}" >> $GITHUB_ENV
+          echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
+          echo "TELEFONE=${{ secrets.TELEFONE }}" >> $GITHUB_ENV
 
       - name: Rodar Script de Lembretes
         env:
