--- a/.github/workflows/lembretes.yml
+++ b/.github/workflows/lembretes.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - Lembrete
   schedule:
-    - cron: '*/1 * * * *'  # Executa a cada 5 minutos
-  workflow_dispatch:  # Permite execução manual
+    - cron: '*/5 * * * *'
+  workflow_dispatch:
 
 jobs:
   lembretes_job:
@@ -25,14 +25,11 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Definir Variáveis de Ambiente
-        run: |
-          echo "ACCOUNT_SID=${{ secrets.ACCOUNT_SID }}" >> $GITHUB_ENV
-          echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
-          echo "TELEFONE=${{ secrets.TELEFONE }}" >> $GITHUB_ENV
-
-      - name: Rodar Script de Lembretes
         env:
           ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}
           AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
           TELEFONE: ${{ secrets.TELEFONE }}
-        run: python src/lembretes.py
+        run: |
+          echo "export ACCOUNT_SID=${{ secrets.ACCOUNT_SID }}" >> $GITHUB_ENV
+          echo "export AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
+          echo "export TELEFONE=${{ secrets.TELEFONE }}" >> $GITHUB
