--- a/.github/workflows/lembretes.yml
+++ b/.github/workflows/lembretes.yml
@@ -30,9 +30,20 @@ jobs:
           echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
           echo "TELEFONE=${{ secrets.TELEFONE }}" >> $GITHUB_ENV
 
-      - name: Rodar Script de Lembretes
+      - name: Verificar Variáveis
+        run: |
+          echo "Verificando variáveis..."
+          echo "ACCOUNT_SID: $ACCOUNT_SID"
+          echo "AUTH_TOKEN: $AUTH_TOKEN"
+          echo "TELEFONE: $TELEFONE"
         env:
           ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}
           AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
           TELEFONE: ${{ secrets.TELEFONE }}
+
+      - name: Rodar Script de Lembretes
         run: python src/lembretes.py
+        env:
+          ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}
+          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+          TELEFONE: ${{ secrets.TELEFONE }}
