--- a/.github/workflows/lembretes.yml
+++ b/.github/workflows/lembretes.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Instalar Dependências
         run: pip install -r requirements.txt
 
-      - name: Definir Variáveis de Ambiente Corretamente
+      - name: Definir Variáveis de Ambiente
         run: |
           echo "ACCOUNT_SID=${{ secrets.ACCOUNT_SID }}" >> $GITHUB_ENV
           echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
@@ -37,9 +37,13 @@ jobs:
           echo "ACCOUNT_SID=$ACCOUNT_SID"
           echo "AUTH_TOKEN=$AUTH_TOKEN"
           echo "TELEFONE=$TELEFONE"
+          env | grep ACCOUNT_SID
+          env | grep AUTH_TOKEN
+          env | grep TELEFONE
           if [ -z "$ACCOUNT_SID" ]; then echo "[ERRO] Variável ACCOUNT_SID está vazia!"; fi
           if [ -z "$AUTH_TOKEN" ]; then echo "[ERRO] Variável AUTH_TOKEN está vazia!"; fi
           if [ -z "$TELEFONE" ]; then echo "[ERRO] Variável TELEFONE está vazia!"; fi
 
       - name: Rodar Script de Lembretes
-        run: python src/lembretes.py
+        run: |
+          python src/lembretes.py
